force-app/main/default/objects/Quote/fields/Accepted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date_Time__c</fullName>
    <label>Accepted Date Time</label>
    <type>DateTime</type>
</CustomField>