force-app/main/default/objects/Quote/fields/Account_Name_Conga__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Conga__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Conga)</label>
    <type>Text</type>
</CustomField>