force-app/main/default/objects/Quote/fields/Add_On_Quote__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add On Quote</label>
    <type>Checkbox</type>
</CustomField>