force-app/main/default/objects/Quote/fields/Amex_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Amex_Surcharge__c</fullName>
    <label>Amex Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>