force-app/main/default/objects/Quote/fields/Auto_renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_renew__c</fullName>
    <description>If checked, this subscription will renew automatically</description>
    <inlineHelpText>If checked, this subscription will renew automatically</inlineHelpText>
    <label>Auto renew</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Renewable</fullName>
            </value>
            <value>
                <fullName>Removed from contract</fullName>
            </value>
            <value>
                <fullName>Not clear to the client on subscription value or renewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>