force-app/main/default/objects/Quote/fields/Average_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Average_Revenue__c</fullName>
    <label>Average Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>