force-app/main/default/objects/Quote/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <label>Total Sales Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>