force-app/main/default/objects/Quote/fields/BDM_Commission__c.field-meta.xml
<CustomField>
    <fullName>BDM_Commission__c</fullName>
    <label>BDM Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>