force-app/main/default/objects/Quote/fields/BDM_commission_payable_to__c.field-meta.xml
<CustomField>
    <fullName>BDM_commission_payable_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDM commission payable to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>