force-app/main/default/objects/Quote/fields/CAM_Admin_Support__c.field-meta.xml
<CustomField>
    <fullName>CAM_Admin_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAM Admin Support</label>
    <type>Checkbox</type>
</CustomField>