force-app/main/default/objects/Quote/fields/CAM_commission__c.field-meta.xml
<CustomField>
    <fullName>CAM_commission__c</fullName>
    <label>CAM commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>