force-app/main/default/objects/Quote/fields/CAM_commission_payable_to__c.field-meta.xml
<CustomField>
    <fullName>CAM_commission_payable_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM commission payable to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>