force-app/main/default/objects/Quote/fields/Campaign_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date_Time__c</fullName>
    <label>Campaign End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>