force-app/main/default/objects/Quote/fields/Campaign_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date_Time__c</fullName>
    <label>Campaign Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>