force-app/main/default/objects/Quote/fields/Cap_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Cap_Agreed__c</fullName>
    <label>Cap agreed (max revenue to Givergy)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>