force-app/main/default/objects/Quote/fields/CC1__c.field-meta.xml
<CustomField>
    <fullName>CC1__c</fullName>
    <label>CC1</label>
    <type>Email</type>
</CustomField>