force-app/main/default/objects/Quote/fields/Charity_in_aid_of__c.field-meta.xml
<CustomField>
    <fullName>Charity_in_aid_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charity in aid of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Charity in aid of)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>