force-app/main/default/objects/Quote/fields/Closed_Won_Quote__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Won Quote</label>
    <type>Checkbox</type>
</CustomField>