force-app/main/default/objects/Quote/fields/CMS_Admin_Status__c.field-meta.xml
<CustomField>
    <fullName>CMS_Admin_Status__c</fullName>
    <label>CMS Admin Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training Pending</fullName>
            </value>
            <value>
                <fullName>Training Booked</fullName>
            </value>
            <value>
                <fullName>Training Complete</fullName>
            </value>
            <value>
                <fullName>Pre Launch Pending</fullName>
            </value>
            <value>
                <fullName>Pre Launch Booked</fullName>
            </value>
            <value>
                <fullName>Pre Launch Complete</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>