force-app/main/default/objects/Quote/fields/Commission_Actual_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Actual_Paid_Date__c</fullName>
    <label>Commission Actual Paid Date</label>
    <type>Date</type>
</CustomField>