force-app/main/default/objects/Quote/fields/Commission_Based_Event__c.field-meta.xml
<CustomField>
    <fullName>Commission_Based_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission / Donor Tip</label>
    <type>Checkbox</type>
</CustomField>