force-app/main/default/objects/Quote/fields/Commission_Fee_Verified_in_CMS__c.field-meta.xml
<CustomField>
    <fullName>Commission_Fee_Verified_in_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fees Verified in CMS</label>
    <type>Checkbox</type>
</CustomField>