force-app/main/default/objects/Quote/fields/Commission_notes_for_quote__c.field-meta.xml
<CustomField>
    <fullName>Commission_notes_for_quote__c</fullName>
    <description>Add commission information to appear on the quote. This can be the breakdown of rates and taxes. Ex. 10% commission + 20% VAT</description>
    <inlineHelpText>Add commission information to appear on the quote. This can be the breakdown of rates and taxes. Ex. 10% commission + 20% VAT</inlineHelpText>
    <label>Commission notes for quote</label>
    <length>500</length>
    <type>Html</type>
</CustomField>