force-app/main/default/objects/Quote/fields/Commission_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Pay_Date__c</fullName>
    <label>Commission Pay Date</label>
    <type>Date</type>
</CustomField>