force-app/main/default/objects/Quote/fields/Convert_to_contract__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to contract</label>
    <type>Checkbox</type>
</CustomField>