force-app/main/default/objects/Quote/fields/Create_New_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create New Invoice</label>
    <type>Checkbox</type>
</CustomField>