force-app/main/default/objects/Quote/fields/Deposit_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Due_Date__c</fullName>
    <defaultValue>TODAY()+14</defaultValue>
    <label>Deposit Invoice Due Date</label>
    <type>Date</type>
</CustomField>