force-app/main/default/objects/Quote/fields/Ding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ding_Notes__c</fullName>
    <label>Ding Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>