force-app/main/default/objects/Quote/fields/Ding_Notes_Completed__c.field-meta.xml
<CustomField>
    <fullName>Ding_Notes_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ding Notes Completed</label>
    <type>Checkbox</type>
</CustomField>