force-app/main/default/objects/Quote/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <label>Event Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Description</valueSetName>
    </valueSet>
</CustomField>