force-app/main/default/objects/Quote/fields/Event_Quote_Guest_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Event_Quote_Guest_Numbers__c</fullName>
    <formula>IF(
AND(
RecordType.DeveloperName = &apos;Event&apos;,
ISBLANK(Guests__c)),
0,
1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Quote Guest Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>