force-app/main/default/objects/Quote/fields/Event_Region__c.field-meta.xml
<CustomField>
    <fullName>Event_Region__c</fullName>
    <label>Event Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Geographic_Region</valueSetName>
    </valueSet>
</CustomField>