force-app/main/default/objects/Quote/fields/Event_Type_Event_Values_Only__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Event_Values_Only__c</fullName>
    <label>Event Type (Event Values Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Type_Event_Values_Only</valueSetName>
    </valueSet>
</CustomField>