force-app/main/default/objects/Quote/fields/FEC_Included__c.field-meta.xml
<CustomField>
    <fullName>FEC_Included__c</fullName>
    <label>FEC Included</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Campaign Success Manager</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>