force-app/main/default/objects/Quote/fields/Final_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Amount__c</fullName>
    <formula>TotalPrice * 0.50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>