force-app/main/default/objects/Quote/fields/Final_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Due_Date__c</fullName>
    <defaultValue>Today()+28</defaultValue>
    <label>Final Invoice Due Date</label>
    <type>Date</type>
</CustomField>