force-app/main/default/objects/Quote/fields/Givergy_Live_Auction_Items__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Live_Auction_Items__c</fullName>
    <label>Givergy Live Auction Items</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Givergy Live Auction Items</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>