force-app/main/default/objects/Quote/fields/GSA_Term_Formula__c.field-meta.xml
<CustomField>
    <fullName>GSA_Term_Formula__c</fullName>
    <formula>CASE(Opportunity.GSA_Term__c,
&apos;N/A&apos;, 1,
&apos;1 Year&apos;, 1,
&apos;2 Years&apos;, 2,
&apos;3 Years&apos;, 3,
&apos;4 Years&apos;, 4,
&apos;5 Years&apos;, 5,
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSA Term Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>