force-app/main/default/objects/Quote/fields/Guest_Numbers_Completed__c.field-meta.xml
<CustomField>
    <fullName>Guest_Numbers_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guest Numbers Completed</label>
    <type>Checkbox</type>
</CustomField>