force-app/main/default/objects/Quote/fields/Guests__c.field-meta.xml
<CustomField>
    <fullName>Guests__c</fullName>
    <label>Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>