force-app/main/default/objects/Quote/fields/HSO_On_Stage__c.field-meta.xml
<CustomField>
    <fullName>HSO_On_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSO On Stage</label>
    <type>Checkbox</type>
</CustomField>