force-app/main/default/objects/Quote/fields/Invoice_1_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_1_Due_Date__c</fullName>
    <label>Invoice 1 Due Date</label>
    <type>Date</type>
</CustomField>