force-app/main/default/objects/Quote/fields/Invoice_1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Invoice_1_Percentage__c</fullName>
    <label>Invoice 1 %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>