force-app/main/default/objects/Quote/fields/Invoice_2_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_2_Due_Date__c</fullName>
    <label>Invoice 2 Due Date</label>
    <type>Date</type>
</CustomField>