force-app/main/default/objects/Quote/fields/Invoice_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_3_Amount__c</fullName>
    <formula>Total_Amount__c * Invoice_3_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice 3 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>