force-app/main/default/objects/Quote/fields/Invoice_3_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_3_Due_Date__c</fullName>
    <label>Invoice 3 Due Date</label>
    <type>Date</type>
</CustomField>