force-app/main/default/objects/Quote/fields/Invoice_3_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Invoice_3_Percentage__c</fullName>
    <label>Invoice 3 %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>