force-app/main/default/objects/Quote/fields/isMerged__c.field-meta.xml
<CustomField>
    <fullName>isMerged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMerged</label>
    <type>Checkbox</type>
</CustomField>