force-app/main/default/objects/Quote/fields/isQuote__c.field-meta.xml
<CustomField>
    <fullName>isQuote__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isQuote</label>
    <type>Checkbox</type>
</CustomField>