force-app/main/default/objects/Quote/fields/Kiwanis__c.field-meta.xml
<CustomField>
    <fullName>Kiwanis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kiwanis</label>
    <type>Checkbox</type>
</CustomField>