force-app/main/default/objects/Quote/fields/Kiwanis_Club__c.field-meta.xml
<CustomField>
    <fullName>Kiwanis_Club__c</fullName>
    <label>Kiwanis Club</label>
    <length>255</length>
    <type>Text</type>
</CustomField>