force-app/main/default/objects/Quote/fields/Kiwanis_District__c.field-meta.xml
<CustomField>
    <fullName>Kiwanis_District__c</fullName>
    <label>Kiwanis District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>