force-app/main/default/objects/Quote/fields/Low_Fee_Commission_Event__c.field-meta.xml
<CustomField>
    <fullName>Low_Fee_Commission_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Fee + Commission Event</label>
    <type>Checkbox</type>
</CustomField>