force-app/main/default/objects/Quote/fields/Managing_Office__c.field-meta.xml
<CustomField>
    <fullName>Managing_Office__c</fullName>
    <label>Managing Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>