force-app/main/default/objects/Quote/fields/Move_to_close_won__c.field-meta.xml
<CustomField>
    <fullName>Move_to_close_won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move to close won</label>
    <type>Checkbox</type>
</CustomField>