force-app/main/default/objects/Quote/fields/New_Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Quote_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>