force-app/main/default/objects/Quote/fields/New_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Reporting_Date__c</fullName>
    <formula>IF(
RecordType.DeveloperName = &apos;Unlimited&apos;,  
Subscription_Start_Date__c,
Event_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Reporting Date</label>
    <type>Date</type>
</CustomField>