force-app/main/default/objects/Quote/fields/Number_of_campaigns_included__c.field-meta.xml
<CustomField>
    <fullName>Number_of_campaigns_included__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Number of campaigns included</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>