force-app/main/default/objects/Quote/fields/Number_of_CMS_licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_CMS_licenses__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Subscriptions include 3 Givergy licenses per account. If the organization is purchasing more than 3, please add the number of additional licenses to this field.</description>
    <inlineHelpText>Subscriptions include 3 Givergy licenses per account. If the organization is purchasing more than 3, please add the number of additional licenses to this field.</inlineHelpText>
    <label>Number of CMS licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>