force-app/main/default/objects/Quote/fields/Onsite_Services__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Services__c</fullName>
    <label>Onsite Services</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>Onsite Services</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>