force-app/main/default/objects/Quote/fields/Onsite_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Staff_Required__c</fullName>
    <label>Onsite Staff Required</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Onsite Staff</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>