force-app/main/default/objects/Quote/fields/OpportunityID18__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID18__c</fullName>
    <formula>Opportunity.Opportunity_ID18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityID18</label>
    <type>Text</type>
</CustomField>