force-app/main/default/objects/Quote/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <formula>Opportunity.Owner.FirstName &amp; &apos; &apos; &amp; Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Full Name - Do not use</label>
    <type>Text</type>
</CustomField>