force-app/main/default/objects/Quote/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Partner)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>