force-app/main/default/objects/Quote/fields/Partner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission__c</fullName>
    <label>Partner Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>