force-app/main/default/objects/Quote/fields/Partner_Commission_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission_Pay_Date__c</fullName>
    <label>Partner Commission Pay Date</label>
    <type>Date</type>
</CustomField>