force-app/main/default/objects/Quote/fields/Payment_Fee_Auction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fee_Auction__c</fullName>
    <description>Credit card payment processing rate for auction items, Givergy auction items, donations, buy nows, raffles and 50:50 - was previously Auction Payment Fee but now applied to all item types</description>
    <inlineHelpText>Credit card payment processing rate for auction items, Givergy auction items, donations, buy nows, raffles and 50:50</inlineHelpText>
    <label>Campaign Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>