force-app/main/default/objects/Quote/fields/Payment_Fee_GLI_50_50__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fee_GLI_50_50__c</fullName>
    <label>Payment Fee - 50:50 Raffle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>