force-app/main/default/objects/Quote/fields/Payment_Fee_Pledge__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fee_Pledge__c</fullName>
    <label>Payment Fee - Pledge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>