force-app/main/default/objects/Quote/fields/Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee__c</fullName>
    <label>Platform Fee - Auction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>