force-app/main/default/objects/Quote/fields/Platform_Fee_GLI_Raffle__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee_GLI_Raffle__c</fullName>
    <label>Platform Fee - Raffle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>