force-app/main/default/objects/Quote/fields/Pre_Launch_Event_System_Check__c.field-meta.xml
<CustomField>
    <fullName>Pre_Launch_Event_System_Check__c</fullName>
    <label>Pre-Launch / Event System Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Form sent to client</fullName>
            </value>
            <value>
                <fullName>Chased client</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>