force-app/main/default/objects/Quote/fields/Predicted_Commission_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Commission_Revenue__c</fullName>
    <label>Predicted commission to Givergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>