force-app/main/default/objects/Quote/fields/Predicted_Item_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Item_Revenue__c</fullName>
    <formula>Average_Revenue__c  *  (Givergy_Live_Auction_Items__c +  Givergy_Silent_Auction_Items__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Predicted Item Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>