force-app/main/default/objects/Quote/fields/Pricing_Summary__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Summary__c</fullName>
    <label>Pricing Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>