force-app/main/default/objects/Quote/fields/Primary_CMS_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_CMS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary CMS Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Unlimited_Subscription_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>